# learning-fastapi

./: .gitignore  README.md  pyproject.toml
learning_fastapi/: main.py
tests/: test_learning_fastapi.py
